--- a/disaster management/css/main.css
+++ b/disaster management/css/main.css
@@ -33,7 +33,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 /*header style*/
 .header{
 	background-image: url('../images/headerback.jpg');
-	background-size: contain;
+	background-size: cover;
 	background-position: center;
 	background-repeat: repeat-y;
 }
